FullQa New/src/objects/Performance__c.object
<CustomObject>
    <fields>
        <fullName>AZ_Performance_Rank__c</fullName>
        <formula>IF(  Total_Revenue__c / Quota__c  &lt; 0.6, &quot;Low Performer&quot;, IF(Total_Revenue__c / Quota__c &lt; 1, &quot;Average Performer&quot;, &quot;Top Performer&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activities_Rating__c</fullName>
        <formula>&quot;Hello World!&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activities Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activities_Total__c</fullName>
        <formula>April_Campaigns__c + August_Campaigns__c + Dec_Campaigns__c + Feb_Campaigns__c + Jan_Campaigns__c + July_Campaigns__c +  June_Campaigns__c + Mar_Campaigns__c + May_Campaigns__c + Nov_Campaigns__c + Oct_Campaigns__c +  Sep_Campaigns__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Budget_YTD__c</fullName>
        <formula>Case(Month(Today()),
1,Jan_Campaigns__c,
2,Jan_Campaigns__c + Feb_Campaigns__c,
3,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c,
4,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c,
5,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c,
6,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c,
7,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c,
8,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c + August_Campaigns__c,
9,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c + August_Campaigns__c + Sep_Campaigns__c,
10,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c + August_Campaigns__c + Sep_Campaigns__c + Oct_Campaigns__c,
11,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c + August_Campaigns__c + Sep_Campaigns__c + Oct_Campaigns__c + Nov_Campaigns__c,
12,Jan_Campaigns__c + Feb_Campaigns__c + Mar_Campaigns__c + April_Campaigns__c + May_Campaigns__c + June_Campaigns__c + July_Campaigns__c + August_Campaigns__c + Sep_Campaigns__c + Oct_Campaigns__c + Nov_Campaigns__c + Dec_Campaigns__c,
Activities_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Budget YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Bookings__c</fullName>
        <label>Actual Partner Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Deals__c</fullName>
        <formula>Account__r.Total_Deals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Partner Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Opps__c</fullName>
        <formula>Account__r.Total_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Partner Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <formula>Account__r.Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>August_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Deal__c</fullName>
        <formula>Total_Revenue__c / Won_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blue_in_a_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Mgmt: Liz Anderson</description>
        <label>Blue-in-a-Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_in_the_Box_Signup_Date__c</fullName>
        <description>BIB checkbox checked date
Automated by workflow when box is checked.
Partner Mgmt: Liz Anderson</description>
        <label>Blue-in-the-Box Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Bookings__c</fullName>
        <label>Expected Bookings</label>
        <summarizedField>PBP_Event__c.Expected_Bookings__c</summarizedField>
        <summaryForeignKey>PBP_Event__c.PBP_Sales_Marketing_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Deals__c</fullName>
        <label>Expected Deals</label>
        <summarizedField>PBP_Event__c.Expected_Deals__c</summarizedField>
        <summaryForeignKey>PBP_Event__c.PBP_Sales_Marketing_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Leads__c</fullName>
        <label>Expected Leads</label>
        <summarizedField>PBP_Event__c.Expected_Leads__c</summarizedField>
        <summaryForeignKey>PBP_Event__c.PBP_Sales_Marketing_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Opps__c</fullName>
        <label>Expected Opps</label>
        <summarizedField>PBP_Event__c.Expected_Opps__c</summarizedField>
        <summaryForeignKey>PBP_Event__c.PBP_Sales_Marketing_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CDMID__c</fullName>
        <formula>Account__r.CDM__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDMID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PBP_Sales_Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_Effective__c</fullName>
        <defaultValue>2015</defaultValue>
        <label>Calendar Year Effective</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Target__c</fullName>
        <label>Activities Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaigns_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaigns Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deals_Act_Target__c</fullName>
        <formula>IF(Deals_Total__c &gt; 0, TEXT(Actual_Deals__c)&amp;&quot;/&quot;&amp;TEXT(Deals_Total__c)&amp;&quot;:&quot;&amp;TEXT((ROUND(Actual_Deals__c/Deals_Total__c,2))*100)&amp;&quot;%&quot;,&quot;No Targets&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deals Act/Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deals_Budget_YTD__c</fullName>
        <formula>Case(Month(Today()),
1,Jan_Deals__c,
2,Jan_Deals__c + Feb_Deals__c,
3,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c,
4,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c,
5,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c,
6,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c,
7,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c,
8,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c + Aug_Deals__c,
9,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c + Aug_Deals__c + Sep_Deals__c,
10,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c + Aug_Deals__c + Sep_Deals__c + Oct_Deals__c,
11,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c + Aug_Deals__c + Sep_Deals__c + Oct_Deals__c + Nov_Deals__c,
12,Jan_Deals__c + Feb_Deals__c + Mar_Deals__c + Apr_Deals__c + May_Deals__c + Jun_Deals__c + Jul_Deals__c + Aug_Deals__c + Sep_Deals__c + Oct_Deals__c + Nov_Deals__c + Dec_Deals__c,
 Deals_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deals Budget YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deals_Conversion__c</fullName>
        <formula>IF( Deals_Total__c = 0, 0 ,Actual_Deals__c /  Deals_Total__c  * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deals Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deals_Rating__c</fullName>
        <formula>IF( Deals_Conversion__c &lt; 80, IMAGE( &quot;/img/samples/flag_red.gif &quot;,&quot;Red&quot;),IF (Deals_Conversion__c &lt; 100, IMAGE( &quot;/img/samples/flag_yellow.gif &quot;, &quot;Yellow&quot; ),IMAGE( &quot;/img/samples/flag_green.gif &quot;,&quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deals Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deals_Total__c</fullName>
        <formula>Apr_Deals__c + Aug_Deals__c + Dec_Deals__c + Feb_Deals__c + Jan_Deals__c + Jul_Deals__c + Jun_Deals__c + Mar_Deals__c + May_Deals__c + Nov_Deals__c  + Oct_Deals__c + Sep_Deals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Actual__c</fullName>
        <label>Lead Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Target__c</fullName>
        <label>Lead Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Budget_YTD__c</fullName>
        <formula>Case(Month(Today()),
1,Jan_Leads__c,
2,Jan_Leads__c + Feb_Leads__c,
3,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c,
4,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c,
5,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c,
6,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c,
7,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c,
8,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c + Aug_Leads__c,
9,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c + Aug_Leads__c + Sep_Leads__c,
10,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c + Aug_Leads__c + Sep_Leads__c + Oct_Leads__c,
11,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c + Aug_Leads__c + Sep_Leads__c + Oct_Leads__c + Nov_Leads__c,
12,Jan_Leads__c + Feb_Leads__c + Mar_Leads__c + Apr_Leads__c + May_Leads__c + Jun_Leads__c + Jul_Leads__c + Aug_Leads__c + Sep_Leads__c + Oct_Leads__c + Nov_Leads__c + Dec_Leads__c,
 Lead_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Budget YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Rating__c</fullName>
        <formula>&quot;Hello World!&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_Total__c</fullName>
        <formula>Apr_Leads__c + Aug_Leads__c + Dec_Leads__c + Feb_Leads__c + Jan_Leads__c + Jul_Leads__c + Jun_Leads__c + Mar_Leads__c + May_Leads__c + Nov_Leads__c  + Oct_Leads__c + Sep_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Certification_Date__c</fullName>
        <label>Marketing Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Certification__c</fullName>
        <label>Marketing Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>May_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Actual__c</fullName>
        <label>Opportunities Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities_Target__c</fullName>
        <label>Opportunities Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opps_Act_Target__c</fullName>
        <formula>IF(Opps_Total__c &gt; 0,TEXT(Actual_Opps__c)&amp;&quot;/&quot;&amp;TEXT(Opps_Total__c)&amp;&quot;:&quot;&amp;TEXT((ROUND(Actual_Opps__c/Opps_Total__c,2))*100)&amp;&quot;%&quot;,&quot;No Targets&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps Act/Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opps_Budget_YTD__c</fullName>
        <formula>Case(Month(Today()),
1,Jan_Opps__c,
2,Jan_Opps__c + Feb_Opps__c,
3,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c,
4,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c,
5,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c,
6,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c,
7,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c,
8,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c + Aug_opps__c,
9,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c + Aug_opps__c + Sep_Opps__c,
10,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c + Aug_opps__c + Sep_Opps__c + Oct_Opps__c,
11,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c + Aug_opps__c + Sep_Opps__c + Oct_Opps__c + Nov_Opps__c,
12,Jan_Opps__c + Feb_Opps__c + Mar_Opps__c + Apr_Opps__c + May_Opps__c + Jun_Opps__c + Jul_Opps__c + Aug_opps__c + Sep_Opps__c + Oct_Opps__c + Nov_Opps__c + Dec_Opps__c,
 Opportunities_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps Budget YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opps_Conversion__c</fullName>
        <formula>IF( Opps_Total__c = 0, 0, Actual_Opps__c / Opps_Total__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opps_Rating__c</fullName>
        <formula>IF( Opps_Conversion__c &lt; 80, IMAGE( &quot;/img/samples/flag_red.gif &quot;,&quot;Red&quot;),IF (Opps_Conversion__c &lt; 100, IMAGE( &quot;/img/samples/flag_yellow.gif &quot;, &quot;Yellow&quot; ),IMAGE( &quot;/img/samples/flag_green.gif &quot;,&quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opps_Total__c</fullName>
        <formula>Apr_Opps__c + Aug_opps__c + Dec_Opps__c + Feb_Opps__c + Jan_Opps__c + Jul_Opps__c + Jun_Opps__c + Mar_Opps__c + May_Opps__c + Nov_Opps__c  + Oct_Opps__c + Sep_Opps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orange_in_a_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Mgmt: Liz Anderson</description>
        <label>Orange-in-a-Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orange_in_the_Box_Signup_date__c</fullName>
        <description>OIB checkbox checked date
Automated by workflow when box is checked.
Partner Mgmt: Liz Anderson</description>
        <label>Orange/Blue-in-the-Box Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBP_Cancellation_Date__c</fullName>
        <label>PBP Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PBP_Event_Activites__c</fullName>
        <inlineHelpText>Summary count of all PBP Events with a campaign associated</inlineHelpText>
        <label>PBP Event Activites</label>
        <summaryFilterItems>
            <field>PBP_Event__c.Campaign_Exists__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PBP_Event__c.PBP_Sales_Marketing_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PBP_Sales_Marketing_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PMP_Sales_Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Bookings_Goal__c</fullName>
        <label>Partner Bookings Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Budget_Bookings__c</fullName>
        <formula>Account__r.Sales_Quota_Bookings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Budget Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Budget_Deals__c</fullName>
        <formula>Account__r.Sales_Ding_Quota__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Budget Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Deal_Goal__c</fullName>
        <label>Partner Deal Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_of_Bookings_Goal__c</fullName>
        <formula>Account__r.Total_Revenue__c /  Partner_Bookings_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner % of Bookings Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_of_Deal_Goal__c</fullName>
        <formula>Account__r.Total_Deals__c /  Partner_Bookings_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner % of Deal Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quota_Act_Target__c</fullName>
        <formula>IF( Quota__c  &gt; 0, TEXT( Round(Actual_Revenue__c,0) )&amp;&quot;/&quot;&amp;TEXT(Round(Quota__c,0))&amp;&quot;:&quot;&amp;TEXT((ROUND(Actual_Revenue__c/Quota__c,2))*100)&amp;&quot;%&quot;,&quot;No Targets&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Act/Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Attainment__c</fullName>
        <formula>TEXT(FLOOR(Total_Revenue__c /  Quota__c * 100)) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Attainment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Conversion__c</fullName>
        <formula>IF(  Quota__c = 0, 0 , Actual_Revenue__c  / Quota__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Rating__c</fullName>
        <formula>IF(  Quota_Conversion__c  &lt; 80, IMAGE( &quot;/img/samples/flag_red.gif &quot;,&quot;Red&quot;),IF (Quota_Conversion__c &lt; 100, IMAGE( &quot;/img/samples/flag_yellow.gif &quot;, &quot;Yellow&quot; ),IMAGE( &quot;/img/samples/flag_green.gif &quot;,&quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salt_in_a_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Mgmt: Liz Anderson</description>
        <label>SALT-in-a-Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salt_in_the_Box_Signup_Date__c</fullName>
        <description>Date partner record SIB checkbox checked.
Automated by Workflow rule:
Partner Mgmt. Liz Anderson</description>
        <label>SALT-in-the-Box Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sep_Campaigns__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Deals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Leads__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>